--- a/collection.html
+++ b/collection.html
@@ -77,7 +77,7 @@
                 <!-- Gold Category -->
                 <a href="gold.html" class="category-card">
                     <div class="category-img">
-                        <img src="images/3.jpg" alt="Gold Collection">
+                        <img src="3.jpg" alt="Gold Collection">
                     </div>
                     <div class="category-content">
                         <h2 class="serif">Gold</h2>
@@ -88,7 +88,7 @@
                 <!-- Silver Category -->
                 <a href="silver.html" class="category-card">
                     <div class="category-img">
-                        <img src="images/5.jpg" alt="Silver Collection">
+                        <img src="5.jpg" alt="Silver Collection">
                     </div>
                     <div class="category-content">
                         <h2 class="serif">Silver</h2>
@@ -99,7 +99,7 @@
                 <!-- Diamond Category -->
                 <a href="diamond.html" class="category-card">
                     <div class="category-img">
-                        <img src="images/7.jpg" alt="Diamond Collection">
+                        <img src="7.jpg" alt="Diamond Collection">
                     </div>
                     <div class="category-content">
                         <h2 class="serif">Diamond</h2>
@@ -110,7 +110,7 @@
                 <!-- Coins Category -->
                 <a href="coins.html" class="category-card">
                     <div class="category-img">
-                        <img src="images/10.jpg" alt="Gold & Silver Coins">
+                        <img src="10.jpg" alt="Gold & Silver Coins">
                     </div>
                     <div class="category-content">
                         <h2 class="serif">Coins</h2>
@@ -153,7 +153,7 @@
 
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2024 NITIN JEWELLERS. All Rights Reserved.</p>
+                <p>&copy; 2026 NITIN JEWELLERS. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
