--- a/silver.html
+++ b/silver.html
@@ -84,7 +84,7 @@
                 <!-- Product 1 -->
                 <article class="vintage-item silver-item">
                     <div class="vintage-img-frame">
-                        <img src="images/5.jpg" alt="Artisan Silver Kalash">
+                        <img src="5.jpg" alt="Artisan Silver Kalash">
                     </div>
                     <div class="item-details">
                         <h3>Artisan Silver Kalash</h3>
@@ -97,7 +97,7 @@
                 <!-- Product 2 -->
                 <article class="vintage-item silver-item">
                     <div class="vintage-img-frame">
-                        <img src="images/7.jpg" alt="Antique Silver Chandbali">
+                        <img src="i7.jpg" alt="Antique Silver Chandbali">
                     </div>
                     <div class="item-details">
                         <h3>Antique Silver Chandbali</h3>
@@ -110,7 +110,7 @@
                 <!-- Product 3 -->
                 <article class="vintage-item silver-item">
                     <div class="vintage-img-frame">
-                        <img src="images/8.jpg" alt="Kada Bangles Set">
+                        <img src="8.jpg" alt="Kada Bangles Set">
                     </div>
                     <div class="item-details">
                         <h3>Kada Bangles Set</h3>
@@ -123,7 +123,7 @@
                 <!-- Additional Placeholder / Conceptual Additions -->
                 <article class="vintage-item silver-item">
                     <div class="vintage-img-frame">
-                        <img src="images/3.jpg" style="filter: grayscale(1) sepia(0.1)" alt="Silver Coin Set">
+                        <img src="3.jpg" style="filter: grayscale(1) sepia(0.1)" alt="Silver Coin Set">
                     </div>
                     <div class="item-details">
                         <h3>Lakshmi Silver Coin Set</h3>
@@ -135,7 +135,7 @@
 
                 <article class="vintage-item silver-item">
                     <div class="vintage-img-frame">
-                        <img src="images/9.jpg" style="filter: grayscale(1) sepia(0.1)" alt="Silver Necklace">
+                        <img src="9.jpg" style="filter: grayscale(1) sepia(0.1)" alt="Silver Necklace">
                     </div>
                     <div class="item-details">
                         <h3>Oxidized Silver Necklace</h3>
@@ -186,7 +186,7 @@
 
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2024 NITIN JEWELLERS. All Rights Reserved.</p>
+                <p>&copy; 2026 NITIN JEWELLERS. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
