Update image paths and copyright year in gold.html

--- a/gold.html
+++ b/gold.html
@@ -84,7 +84,7 @@
                 <!-- Product 1 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/3.jpg" alt="Gold Necklace">
+                        <img src="3.jpg" alt="Gold Necklace">
                     </div>
                     <div class="item-details">
                         <h3>Royal Gold Choker</h3>
@@ -97,7 +97,7 @@
                 <!-- Product 2 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/4.jpg" alt="Gold Set">
+                        <img src="4.jpg" alt="Gold Set">
                     </div>
                     <div class="item-details">
                         <h3>Heritage Rani Haar</h3>
@@ -110,7 +110,7 @@
                 <!-- Product 3 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/6.jpg" alt="Bridal Portrait">
+                        <img src="6.jpg" alt="Bridal Portrait">
                     </div>
                     <div class="item-details">
                         <h3>Bridal Set Box</h3>
@@ -123,7 +123,7 @@
                 <!-- Product 4 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/1.jpg" alt="Necklace Detailing">
+                        <img src="1.jpg" alt="Necklace Detailing">
                     </div>
                     <div class="item-details">
                         <h3>Eternal Shine Necklace</h3>
@@ -136,7 +136,7 @@
                 <!-- Product 5 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/2.jpg" alt="Bridal Display">
+                        <img src="2.jpg" alt="Bridal Display">
                     </div>
                     <div class="item-details">
                         <h3>Ruby Encrusted Haar</h3>
@@ -149,7 +149,7 @@
                 <!-- Product 6 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/9.jpg" alt="Modern Lineage">
+                        <img src="9.jpg" alt="Modern Lineage">
                     </div>
                     <div class="item-details">
                         <h3>Polki Studded Set</h3>
@@ -200,7 +200,7 @@
 
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2024 NITIN JEWELLERS. All Rights Reserved.</p>
+                <p>&copy; 2026 NITIN JEWELLERS. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
