Update image paths and copyright year in diamond.html

--- a/diamond.html
+++ b/diamond.html
@@ -84,7 +84,7 @@
                 <!-- Product 1 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/7.jpg" alt="Diamond Stud Earrings">
+                        <img src="7.jpg" alt="Diamond Stud Earrings">
                     </div>
                     <div class="item-details">
                         <h3>Diamond Solitaire Studs</h3>
@@ -97,7 +97,7 @@
                 <!-- Product 2 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/9.jpg" alt="Diamond Necklace">
+                        <img src="9.jpg" alt="Diamond Necklace">
                     </div>
                     <div class="item-details">
                         <h3>Bridal Diamond Choker</h3>
@@ -110,7 +110,7 @@
                 <!-- Product 3 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/6.jpg" alt="Diamond Bangle">
+                        <img src="6.jpg" alt="Diamond Bangle">
                     </div>
                     <div class="item-details">
                         <h3>Tennis Bracelet Collection</h3>
@@ -161,7 +161,7 @@
 
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2024 NITIN JEWELLERS. All Rights Reserved.</p>
+                <p>&copy; 2026 NITIN JEWELLERS. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
