--- a/coins.html
+++ b/coins.html
@@ -86,7 +86,7 @@
                 <!-- Coin 1 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/10.jpg" alt="Gold Coin">
+                        <img src="10.jpg" alt="Gold Coin">
                     </div>
                     <div class="item-details">
                         <h3>24K Gold Coin — 1g</h3>
@@ -99,7 +99,7 @@
                 <!-- Coin 2 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/11.jpg" alt="Gold Coin 5g">
+                        <img src="11.jpg" alt="Gold Coin 5g">
                     </div>
                     <div class="item-details">
                         <h3>24K Gold Coin — 5g</h3>
@@ -112,7 +112,7 @@
                 <!-- Coin 3 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/12.jpg" alt="Gold Coin 10g">
+                        <img src="12.jpg" alt="Gold Coin 10g">
                     </div>
                     <div class="item-details">
                         <h3>24K Gold Coin — 10g</h3>
@@ -125,7 +125,7 @@
                 <!-- Coin 4 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/13.jpg" alt="Silver Coin">
+                        <img src="13.jpg" alt="Silver Coin">
                     </div>
                     <div class="item-details">
                         <h3>999 Silver Coin — 10g</h3>
@@ -138,7 +138,7 @@
                 <!-- Coin 5 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/14.jpg" alt="Silver Coin 50g">
+                        <img src="14.jpg" alt="Silver Coin 50g">
                     </div>
                     <div class="item-details">
                         <h3>999 Silver Coin — 50g</h3>
@@ -151,7 +151,7 @@
                 <!-- Coin 6 -->
                 <article class="vintage-item">
                     <div class="vintage-img-frame">
-                        <img src="images/15.jpg" alt="Silver Coin 100g">
+                        <img src="15.jpg" alt="Silver Coin 100g">
                     </div>
                     <div class="item-details">
                         <h3>999 Silver Coin — 100g</h3>
@@ -211,5 +211,6 @@
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
+
 
 </html>
