Update image source for Antique Silver Chandbali

--- a/silver.html
+++ b/silver.html
@@ -97,7 +97,7 @@
                 <!-- Product 2 -->
                 <article class="vintage-item silver-item">
                     <div class="vintage-img-frame">
-                        <img src="i7.jpg" alt="Antique Silver Chandbali">
+                        <img src="7.jpg" alt="Antique Silver Chandbali">
                     </div>
                     <div class="item-details">
                         <h3>Antique Silver Chandbali</h3>
