--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="NITIN JEWELLERS - Vadodara's prestigious destination for BIS Hallmarked 22K gold artistry and archival temple jewelry heritage.">
     <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👑</text></svg>">
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22black%22/><text x=%2250%22 y=%2268%22 font-size=%2245%22 font-family=%22Arial%22 font-weight=%22bold%22 fill=%22%23d4af37%22 text-anchor=%22middle%22>NJ</text></svg>">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="hero-image-frame">
-                    <img src="1.jpg" class="main-image" alt="Exquisite Gold Necklace">
+                    <img src="images/1.jpg" class="main-image" alt="Exquisite Gold Necklace">
                     <div class="accent-badge hide-mobile">
                         <span class="serif">100%</span>
                         <p>Hallmark<br>Policy</p>
@@ -119,7 +119,7 @@
         <div class="container">
             <div class="heritage-grid reveal">
                 <div class="heritage-image-wrapper">
-                    <img src="2.jpg" alt="Temple Gold Choker">
+                    <img src="images/2.jpg" alt="Temple Gold Choker">
                     <div class="heritage-badge hide-mobile">
                         <h3 class="serif">Direct Manufacturer</h3>
                         <p>No middleman — crafted in-house by Nitin Soni & his worker team.</p>
@@ -166,6 +166,7 @@
                         <div class="tl-ico">🏅</div>
                         <h4 class="serif">BIS Hallmarked</h4>
                         <p>Official BIS certification — guaranteeing 22K purity on every piece crafted.</p>
+
                     </div>
                 </div>
 
@@ -250,21 +251,23 @@
                 </div>
 
                 <div class="contact-form-wrapper">
-                    <form class="luxury-form"
-                        onsubmit="event.preventDefault(); alert('Thank you. A representative will contact you shortly.');">
+                    <form class="luxury-form" action="https://formsubmit.co/nitinjewellers.shop@gmail.com"
+                        method="POST">
+                        <!-- Disable Captcha for smoother experience -->
+                        <input type="hidden" name="_captcha" value="false">
                         <h3 class="serif">Request an Appointment</h3>
                         <div class="form-group">
-                            <input type="text" placeholder="Full Name" required>
+                            <input type="text" name="Name" placeholder="Full Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="tel" placeholder="Phone Number" required>
+                            <input type="tel" name="Phone" placeholder="Phone Number" required>
                         </div>
                         <div class="form-group">
-                            <select required>
+                            <select name="Service" required>
                                 <option value="" disabled selected>Service of Interest</option>
-                                <option value="bridal">Bridal Styling</option>
-                                <option value="investment">Investment Vault</option>
-                                <option value="custom">Custom Design</option>
+                                <option value="Bridal Styling">Bridal Styling</option>
+                                <option value="Investment Vault">Investment Vault</option>
+                                <option value="Custom Design">Custom Design</option>
                             </select>
                         </div>
                         <button type="submit" class="btn-primary" style="width: 100%;">Book a Visit</button>
@@ -316,4 +319,3 @@
 </body>
 
 </html>
-
