--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="hero-image-frame">
-                    <img src="images/1.jpg" class="main-image" alt="Exquisite Gold Necklace">
+                    <img src="1.jpg" class="main-image" alt="Exquisite Gold Necklace">
                     <div class="accent-badge hide-mobile">
                         <span class="serif">100%</span>
                         <p>Hallmark<br>Policy</p>
@@ -119,7 +119,7 @@
         <div class="container">
             <div class="heritage-grid reveal">
                 <div class="heritage-image-wrapper">
-                    <img src="images/2.jpg" alt="Temple Gold Choker">
+                    <img src="2.jpg" alt="Temple Gold Choker">
                     <div class="heritage-badge hide-mobile">
                         <h3 class="serif">Direct Manufacturer</h3>
                         <p>No middleman — crafted in-house by Nitin Soni & his worker team.</p>
@@ -317,5 +317,6 @@
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
+
 
 </html>
