--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
                             <input type="text" name="Name" placeholder="Full Name" required>
                         </div>
                         <div class="form-group">
+                            <input type="Email" name="Email" placeholder="Email ID" required>
+                        </div>
+                        <div class="form-group">
                             <input type="tel" name="Phone" placeholder="Phone Number" required>
                         </div>
                         <div class="form-group">
@@ -320,3 +323,4 @@
 
 
 </html>
+
